docs: :memo: Swagger atualizado
