# docs/swagger.json
@@ -1,19 +1,8 @@
 {
-    "produces": [
-        "application/json"
-    ],
-    "schemes": [
-        "http"
-    ],
     "swagger": "2.0",
     "info": {
-        "description": "API para gerenciar mercados e produtos",
-        "title": "MarketGo API",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:3000",
-    "basePath": "/",
     "paths": {
         "/invoices": {
             "post": {
@@ -45,6 +34,50 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/models.InvoiceRequest"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "Processo de login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Processo de login",
+                "operationId": "login",
+                "parameters": [
+                    {
+                        "description": "Credenciais de login",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthResponse"
                         }
                     }
                 }
@@ -125,6 +158,46 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Market"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a market by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "markets"
+                ],
+                "summary": "Update a market by ID",
+                "operationId": "update-market",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Market ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Market object that needs to be updated",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Market"
+                        }
                     }
                 ],
                 "responses": {
@@ -271,22 +344,102 @@
                     }
                 }
             }
+        },
+        "/register": {
+            "post": {
+                "description": "Processo de registro",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Processo de registro",
+                "operationId": "register",
+                "parameters": [
+                    {
+                        "description": "Credenciais de registro",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "models.InvoiceRequest": {
+        "models.AuthResponse": {
             "type": "object",
             "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.InvoiceRequest": {
+            "type": "object",
+            "required": [
+                "total_quantity",
+                "uuid_product"
+            ],
+            "properties": {
                 "total_quantity": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 1
                 },
                 "uuid_product": {
                     "type": "string"
                 }
             }
         },
+        "models.LoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Market": {
             "type": "object",
+            "required": [
+                "email",
+                "location",
+                "name"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -295,7 +448,9 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
                 },
                 "owner": {
                     "type": "string"
@@ -313,6 +468,13 @@
         },
         "models.Product": {
             "type": "object",
+            "required": [
+                "market_uuid",
+                "price",
+                "product_name",
+                "quantity",
+                "uuid_product"
+            ],
             "properties": {
                 "market_uuid": {
                     "type": "string"
@@ -321,7 +483,9 @@
                     "type": "number"
                 },
                 "product_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
                 },
                 "quantity": {
                     "type": "integer"
